--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../src/assets/images/logo-image.svg" type="image/x-icon">
+    <title>Rick and morty Wiki</title>
   </head>
   <body>
 
